<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/base_function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_card_view_height"
            android:gravity="center"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_image_list">

            <art.intel.soft.view.BaseCropButtonView
                android:id="@+id/size_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:src="@drawable/ic_crop_size"
                app:text="@string/crop_func_sizes" />

            <art.intel.soft.view.BaseCropButtonView
                android:id="@+id/reflect_vertical_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:src="@drawable/ic_reflect_vertical"
                app:text="@string/crop_func_reflect" />

            <art.intel.soft.view.BaseCropButtonView
                android:id="@+id/reflect_horizontal_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:src="@drawable/ic_reflect_horizontal"
                app:text="@string/crop_func_reflect" />

            <art.intel.soft.view.BaseCropButtonView
                android:id="@+id/rotate_right_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:src="@drawable/ic_turn_right"
                app:text="@string/crop_func_rotate_right" />

            <art.intel.soft.view.BaseCropButtonView
                android:id="@+id/rotate_left_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:src="@drawable/ic_turn_left"
                app:text="@string/crop_func_rotate_left" />

        </LinearLayout>

    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/crop_function_recycler"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bottom_card_view_height"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_crop"
        tools:visibility="visible" />

</LinearLayout>
