<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.save.SaveActivity">

    <art.intel.soft.view.BaseToolbar
        android:id="@+id/navigation_tb"
        style="@style/ToolBarWithNavigationBack"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:elevation="0dp"
        app:text="@string/share_title"
        app:rightIcon="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/savedImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/shareLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="14dp"
        app:layout_goneMarginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@+id/navigation_tb" />

    <androidx.cardview.widget.CardView
        android:id="@+id/shareLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        app:cardCornerRadius="@dimen/radius8"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/share"
                style="@style/ShareItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/share_image_side"
                    android:layout_height="@dimen/share_image_side"
                    android:src="@drawable/ic_share" />

                <TextView
                    style="@style/ShareTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_func_share" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/instagram"
                style="@style/ShareItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/share_image_side"
                    android:layout_height="@dimen/share_image_side"
                    android:src="@drawable/instagam" />

                <TextView
                    style="@style/ShareTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_func_instagram" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebook"
                style="@style/ShareItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/share_image_side"
                    android:layout_height="@dimen/share_image_side"
                    android:src="@drawable/facebook" />

                <TextView
                    style="@style/ShareTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_func_facebook" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/whats_app"
                style="@style/ShareItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/share_image_side"
                    android:layout_height="@dimen/share_image_side"
                    android:src="@drawable/whats_app" />

                <TextView
                    style="@style/ShareTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_func_whatsapp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/twitter_app"
                style="@style/ShareItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/share_image_side"
                    android:layout_height="@dimen/share_image_side"
                    android:src="@drawable/twitter_app" />

                <TextView
                    style="@style/ShareTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_func_twitter" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
