<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_card_view_height"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_ll"
        android:layout_width="wrap_content"
        android:layout_height="72dp">

        <LinearLayout
            android:id="@+id/chest_btn"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_body_breast" />

            <TextView
                style="@style/EditItem.TextView"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_func_breast" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/waist_btn"
            android:layout_width="72dp"
            android:layout_marginTop="4dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/waist_icon"
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_body_waist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/waist_text"/>

            <TextView
                android:id="@+id/waist_text"
                style="@style/EditItem.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_func_waist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waist_icon"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/hips_btn"
            android:layout_width="72dp"
            android:layout_marginTop="4dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="21dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_body_hips" />

            <TextView
                style="@style/EditItem.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/body_func_hips" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/slider_container"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:layout_height="72dp">

        <LinearLayout
            android:id="@+id/settings_button"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/EditItem.ImageView"
                android:src="@drawable/ic_settings"
                app:tint="@android:color/holo_blue_dark" />

        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:value="50"
            android:valueFrom="0"
            android:valueTo="100"
            app:thumbColor="@color/colorBlack"
            app:thumbRadius="7dp"
            app:trackColorActive="@color/colorBlack"
            app:trackColorInactive="@color/colorBlack"
            tools:theme="@style/SliderTheme" />

    </LinearLayout>

</LinearLayout>
